fix: fixed alignment issue

--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -9,6 +9,10 @@
   background: rgba(255, 255, 255, 0.5);
   border: 1px solid rgba(255, 255, 255, 0.18);
 
+  @media screen and (max-width: 768px) {
+    padding: 1rem 0.5rem;
+  }
+
   &--shadow {
     backdrop-filter: blur(4px);
     -webkit-backdrop-filter: blur(4px);
