--- a/src/container/Skills/Skills.module.scss
+++ b/src/container/Skills/Skills.module.scss
@@ -144,7 +144,6 @@
 
 .skills-tooltip {
   max-width: 400px !important;
-  min-width: 400px !important;
   box-shadow: 0 0 25px rgba(0, 0, 0, 0.1) !important;
   border-radius: 5px !important;
   padding: 1rem !important;
