--- a/src/styles/components/_tooltip.scss
+++ b/src/styles/components/_tooltip.scss
@@ -15,7 +15,7 @@
     color: var(--tooltip-color);
     border-radius: 3px;
     line-height: 1.4;
-    width: max-content;
+    width: 100%;
 
     &.dark,
     &.dark::before {
